crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_preserve_filenames.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 895
expression: output
---
============================= test.tsx ==
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export const App = componentQrl((props) => {
	return _jsxSorted(Cmp, null, null, <p class="stuff" onClick$={() => console.log("warn")}>Hello Qwik</p>, 1, "0");
}, "_u6BtPnK76q4");

== DIAGNOSTICS ==
[]
