crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_preserve_filenames_segments.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { component$, useStore } from "@qwik.dev/core";
export const App = qrl(() => import("./test.tsx_App_Jlq9hNxnCvw.tsx"), "App_Jlq9hNxnCvw");
export const foo = () => console.log("foo");

============================= test.tsx_App_Jlq9hNxnCvw.js (ENTRY POINT) ==
import { foo } from "./test.js";
export const App_Jlq9hNxnCvw = (props: Stuff) => {
	foo();
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "App_Jlq9hNxnCvw",
  "entry": null,
  "displayName": "test.tsx_App",
  "hash": "Jlq9hNxnCvw",
  "canonicalFilename": "test.tsx_App_Jlq9hNxnCvw",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    76,
    220
  ],
  "paramNames": [
    "props"
  ]
}
*/
== DIAGNOSTICS ==
[]
