crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_prod_node.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.tsx ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_s_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "s_HTDRsvUbLiE");
//
export const Foo = /*#__PURE__*/ componentQrl(q_s_HTDRsvUbLiE);

============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT) ==
export const s_HTDRsvUbLiE = () => {
	return (
		<div>
			<div onClick$={() => console.log('first')}/>
			<div onClick$={() => console.log('second')}/>
			<div onClick$={() => console.log('third')}/>
		</div>
	);
};
/*
{
  "origin": "test.tsx",
  "name": "s_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    262
  ]
}
*/
============================= test.tsx_Foo_component_div_div_q_e_click_2_n19LdlqL6To.tsx (ENTRY POINT) ==
export const s_n19LdlqL6To = ()=>console.log("third");

/*
{
  "origin": "test.tsx",
  "name": "s_n19LdlqL6To",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click_2",
  "hash": "n19LdlqL6To",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_2_n19LdlqL6To",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    218,
    244
  ]
}
*/
============================= test.tsx_Foo_component_div_div_q_e_click_vKrX4PmH2aM.tsx (ENTRY POINT) ==
export const s_vKrX4PmH2aM = ()=>console.log("first");

/*
{
  "origin": "test.tsx",
  "name": "s_vKrX4PmH2aM",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click",
  "hash": "vKrX4PmH2aM",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_vKrX4PmH2aM",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    121,
    147
  ]
}
*/
============================= test.tsx_Foo_component_div_div_q_e_click_1_VSoqbTjzr4w.tsx (ENTRY POINT) ==
export const s_VSoqbTjzr4w = ()=>console.log("second");

/*
{
  "origin": "test.tsx",
  "name": "s_VSoqbTjzr4w",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click_1",
  "hash": "VSoqbTjzr4w",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_1_VSoqbTjzr4w",
  "path": "",
  "extension": "tsx",
  "parent": "s_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    169,
    196
  ]
}
*/
== DIAGNOSTICS ==
[]
