crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_props_wrapping.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
snapshot_kind: text
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { useSignal } from '@qwik.dev/core';
export const Works = componentQrl((_rawProps) => {
	const fromProps = _rawProps.fromProps;
	let fromLocal = useSignal(0);
	return _jsxSorted("div", {
		computed: fromLocal + fromProps,
		local: fromLocal,
		"props-wrap": fromProps,
		"props-only": { props: fromProps },
		props: {
			props: fromProps,
			local: fromLocal
		}
	}, null, null, 1, null);
}, "Works_component_t45qL4vNGv0");

== DIAGNOSTICS ==
[]
