crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_props_wrapping2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { $, component$, useSignal } from "@qwik.dev/core";
export const Works = componentQrl((props: {
	fromProps: number;
}) => {
	let fromLocal = useSignal(0);
	return _jsxSorted("div", {
		computed: fromLocal + props.fromProps,
		local: fromLocal,
		"props-wrap": props.fromProps,
		"props-only": { props: props.fromProps },
		props: {
			props: props.fromProps,
			local: fromLocal
		}
	}, null, null, 1, null);
}, "_u6BtPnK76q4");

== DIAGNOSTICS ==
[]
