crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_props_wrapping_children.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 903
expression: output
---
============================= test.js ==
import { _noopQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_Works_component_t45qL4vNGv0 = /*#__PURE__*/ _noopQrl("Works_component_t45qL4vNGv0");
//
q_Works_component_t45qL4vNGv0.s((_rawProps) => {
	const fromProps = _rawProps.fromProps;
	let fromLocal = useSignal(0);
	return _jsxSorted("div", null, null, [
		fromLocal,
		fromProps,
		fromLocal + fromProps,
		{ props: fromProps },
		{ local: fromLocal },
		{
			props: fromProps,
			local: fromLocal
		}
	], 1, null);
});
export const Works = /*#__PURE__*/ componentQrl(q_Works_component_t45qL4vNGv0);
== DIAGNOSTICS ==
[]
