crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_props_wrapping_children2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 904
expression: output
---
============================= test.js ==
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { $, useSignal } from "@qwik.dev/core";
export const Works = componentQrl((props) => {
	let fromLocal = useSignal(0);
	return _jsxSorted("div", null, null, [
		"before-",
		fromLocal,
		props.fromProps,
		fromLocal + props.fromProps,
		{ props: props.fromProps },
		{ local: fromLocal },
		{
			props: props.fromProps,
			local: fromLocal
		},
		"-after"
	], 1, null);
}, "Works_component_t45qL4vNGv0");

== DIAGNOSTICS ==
[]
