crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_qwik_conflict.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
assertion_line: 905
expression: output
---
============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { qrl } from '@qwik.dev/core/what';
//
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
const q_Root_component_royhjYaCbYE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Root_component_royhjYaCbYE"), "Root_component_royhjYaCbYE");
//
export const hW = 12;
export const handleWatch = 42;
const componentQrl = () => console.log("not this", qrl());
/*#__PURE__*/ componentQrl();
export const Foo = /*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE, { tagName: "my-foo" });
export const Root = /*#__PURE__*/ componentQrl(q_Root_component_royhjYaCbYE, { tagName: "my-foo" });

============================= test.tsx_Root_component_1_cBpQNYDUHI4.js (ENTRY POINT) ==
export const Root_component_1_cBpQNYDUHI4 = () => {
		return (
			<div/>
		)
	};
/*
{
  "origin": "test.tsx",
  "name": "Root_component_1_cBpQNYDUHI4",
  "entry": null,
  "displayName": "test.tsx_Root_component_1",
  "hash": "cBpQNYDUHI4",
  "canonicalFilename": "test.tsx_Root_component_1_cBpQNYDUHI4",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    519,
    557
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT) ==
import { hW } from "./test";
import { handleWatch } from "./test";
import { qrl } from "@qwik.dev/core/what";
export const Foo_component_HTDRsvUbLiE = () => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
};
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    253,
    445
  ]
}
*/
============================= test.tsx_Root_component_royhjYaCbYE.js (ENTRY POINT) ==
import { $ } from "@qwik.dev/core";
import { useStyles } from "@qwik.dev/core";
export const Root_component_royhjYaCbYE = () => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
};
/*
{
  "origin": "test.tsx",
  "name": "Root_component_royhjYaCbYE",
  "entry": null,
  "displayName": "test.tsx_Root_component",
  "hash": "royhjYaCbYE",
  "canonicalFilename": "test.tsx_Root_component_royhjYaCbYE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    468,
    586
  ]
}
*/
============================= test.tsx_Root_component_useStyles_u5DkUxGrGnU.js (ENTRY POINT) ==
export const Root_component_useStyles_u5DkUxGrGnU = "thing";

/*
{
  "origin": "test.tsx",
  "name": "Root_component_useStyles_u5DkUxGrGnU",
  "entry": null,
  "displayName": "test.tsx_Root_component_useStyles",
  "hash": "u5DkUxGrGnU",
  "canonicalFilename": "test.tsx_Root_component_useStyles_u5DkUxGrGnU",
  "path": "",
  "extension": "js",
  "parent": "Root_component_royhjYaCbYE",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    498,
    508
  ]
}
*/
============================= test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg.js (ENTRY POINT) ==
import { qrl } from "@qwik.dev/core/what";
export const Foo_component_div_q_e_click_YEa2A5ADUOg = () => console.log(qrl);

/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_q_e_click_YEa2A5ADUOg",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_q_e_click",
  "hash": "YEa2A5ADUOg",
  "canonicalFilename": "test.tsx_Foo_component_div_q_e_click_YEa2A5ADUOg",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    390,
    411
  ]
}
*/
== DIAGNOSTICS ==
[]
