crates/qwik-optimizer-oxc/tests/snapshots/snapshot_tests__snapshot_transform_tests__example_reg_ctx_name_segments.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
============================= test.js ==
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { Fragment } from "@qwik.dev/core";
import { $, component$, server$ } from "@qwik.dev/core";
import { foo } from "./foo";
export const Works = componentQrl((props) => {
	const text = "hola";
	return _jsxSorted(_Fragment, null, null, [<div onClick$={serverQrl(() => console.log("in server", text), "component_ZUK1E201Ins", [text])}></div>, <div onClick$={() => foo()}></div>], 1, null);
}, "_u6BtPnK76q4");

== DIAGNOSTICS ==
[]
